# Python-ffmpeg-wrapper

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
ffmpeg_wrapper/: __init__.py  exceptions.py  ffmpeg.py  probe.py
tests/: test_ffmpeg.py  test_probe.py
