[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg-wrapper"
version = "0.1.0"
description = "A fluent Python wrapper for the ffmpeg command-line tool"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["ffmpeg", "video", "audio", "media", "wrapper", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gopal-gautam/Python-ffmpeg-wrapper"
Repository = "https://github.com/gopal-gautam/Python-ffmpeg-wrapper"
"Bug Tracker" = "https://github.com/gopal-gautam/Python-ffmpeg-wrapper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ffmpeg_wrapper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
